kustomization/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: word-app-frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    nodePort: 32757
